samples/_failures_safe/1761356808_b988b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f57438f7.c: In function ‘main’:
./samples/SAFE/__tmp_f57438f7.c:151:12: error: expected expression at end of input
  151 |     struct Graph* graph = createGraph(5,
      |            ^~~~~
./samples/SAFE/__tmp_f57438f7.c:151:12: error: expected declaration or statement at end of input
